--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,30 @@ build-backend = "flit_core.buildapi"
 name = "ryon"
 authors = [{name = "Pavel Klinger", email = "ja@bigr.cz"}]
 dynamic = ["version", "description"]
-readme = "README.md"
-license = "LICENSE"
+readme = {file = "README.md", content-type = "text/markdown"}
+license = {file = "LICENSE"}
 requires-python = ">=3.10"
+dependencies = []
 
 [project.urls]
 Home = "https://github.com/bigr/ryon"
+
+[project.optional-dependencies]
+test = [
+    "pytest==8.1.1",
+    "pytest-cov==5.0.0"
+]
+dev = [
+    "pre-commit==3.7.0",
+    "ruff==0.4.1",
+    "mypy==1.9.0",
+]
 
 [tool.ruff]
 line-length = 120
 
 [tool.ruff.lint]
 extend-select = ["E501"]
+
+[tool.setuptools_scm]
+write_to = "ryon/_version.py"
