--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ dynamic = ["version", "description"]
 readme = {file = "README.md", content-type = "text/markdown"}
 license = {file = "LICENSE"}
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "lark==1.1.9"
+]
 
 [project.urls]
 Home = "https://github.com/bigr/ryon"
