--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ requires-python = ">=3.10"
 dependencies = [
     "lark==1.1.9",
     "llvmlite==0.42.0",
+    "pyyaml==6.0.1",
 ]
 
 [project.urls]
@@ -26,6 +27,7 @@ dev = [
     "pre-commit==3.7.0",
     "ruff==0.4.1",
     "mypy==1.9.0",
+    "types-pyyaml==6.0.12.20240311",
 ]
 
 [tool.ruff]
@@ -36,3 +38,7 @@ extend-select = ["E501"]
 
 [tool.setuptools_scm]
 write_to = "ryon/_version.py"
+
+[[tool.mypy.overrides]]
+module = "yaml.*"
+ignore_missing_imports = true
